test/classes/bradc/paramInClass/weirdParamInit3.good
weirdParamInit3.chpl:6: error: invalid generic type specification on class field
